--- a/r4babs4/week-2/workshop.qmd
+++ b/r4babs4/week-2/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "Data Analysis 2: Immunobiology - Sample data analysis"
+subtitle: "Data Analysis 2: Biomedical sciences - Sample data analysis"
 toc: true
 toc-location: right
 ---
