--- a/r4babs4/week-2/study_after_workshop.qmd
+++ b/r4babs4/week-2/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Data Analysis 2: Immunobiology - Sample data analysis"
+subtitle: "Data Analysis 2: Biomedical sciences - Sample data analysis"
 toc: true
 toc-location: right
 format:
