--- a/r4babs4/week-4/study_after_workshop.qmd
+++ b/r4babs4/week-4/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Data Analysis 3: Immunobiology - Your data analysis"
+subtitle: "Data Analysis 3: Biomedical sciences - Your data analysis"
 toc: true
 toc-location: right
 format:
